Refactor on unit testing